# continunet

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Pipfile  README.md  config.py  pyproject.toml  setup.py
.github/workflows/: publish.yml  pytest.yml
continunet/: __init__.py  constants.py  example_image.fits  finder.py  user_example.ipynb
continunet/image/: fits.py  pre_processing.py  processing.py
continunet/images/: fits.py
continunet/network/: train.py  unet.py
continunet/tests/: conftest.py  test_image_fits.py  test_image_pre_processing.py  test_image_processing.py  test_images_fits.py  test_network_unet.py  test_unet.py
